src/main/resources/static/style/app/styles.css
body {
    color: rgb(51, 51, 51);
    display: block;
    font-family: Roboto, sans-serif;
    font-size: 1.5em;
    height: 120px;
    background-color: #2f2f2f;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
    text-align: center;
}

.content {

    max-width: 600px;
    margin: 0 auto;

}

.intro {

    margin-bottom: 50px;
    margin-left: 0px;
    margin-right: 0px;
    margin-top: 150px;
    text-align: center;
}

table {
    margin: auto;
    font-size: 11px;
}

.intro {
    text-align: center;
}

.intro a {
    text-decoration: none;
}

.highlight {
    background-color: #333;
    font-weight: bold;
    color: white;
}

table a {
    font-weight: bold;
    float: left;
    text-decoration: none;
    color: black;
}

table span {
    margin-left: 2em;
    float: left;
}

.highlight-red {
    background-color: darkred;
    color: white;
    padding-bottom: 5px;
    padding-top: 0px;
    text-decoration: none;
}

.highlight-red:hover {
    background-color: red;
    color: white;
    transition: 1s;
    text-decoration: none;
}

body {
    font: 20px Montserrat, sans-serif;
    line-height: 1.8;
    color: #f5f6f7;
}

.margin {
    margin-bottom: 1em;
}

.bg-1 {
    background-color: #1abc9c; /* Green */
    color: #ffffff;
}

.bg-2 {
    background-color: #474e5d; /* Dark Blue */
    color: #ffffff;
}

.bg-3 {
    background-color: #ffffff; /* White */
    color: #555555;
}

.bg-4 {
    background-color: #2f2f2f; /* Black Gray */
    color: #fff;
}

.container-fluid {
    padding-top: 70px;
    padding-bottom: 70px;
}

.navbar {
    padding-top: 15px;
    padding-bottom: 15px;
    border: 0;
    border-radius: 0;
    margin-bottom: 0;
    font-size: 12px;
    letter-spacing: 5px;
}

.navbar-nav li a:hover {
    color: #1abc9c !important;
}

.style-refference-social {
    margin-top: 0.5em;
    font-size: xx-large;
    font-weight: bold;
    color: ivory;
}

.background-table {
    border-radius: .5em;
    background: rgba(26, 26, 26, .4);
    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 1) !important;
    top: -1rem;
    bottom: 1rem;
}

.background-table-padding {
    padding-bottom: 2rem;
    padding-top: 2rem;
}

#top-menu {
    margin-bottom: 2.2rem;
}

.border-custom {
    border-radius: .5em;
}

#main-image{
    display:inline;
    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 1) !important;
}

.block {
    margin-top: 1%;
    margin-bottom: 1%;
    margin-left: 6%;
    margin-right: 6%;
}

